@@ -32,6 +32,7 @@
 - Fix make sure the collected logs or metrics include streams information. {pull}18261[18261]
 - Fix version to 7.8 {pull}18286[18286]
 - Fix an issue where the checkin_frequency, jitter, and backoff options where not configurable. {pull}17843[17843]
+- Stop monitoring on config change {pull}18284[18284]
 
 ==== New features
 
